--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-<title>Dark Field</title>
+<title>Dungeon Crawler</title>
 <style>
   html {
     background-color: #000;
